compilateurDeca/src/test/deca/context/invalid/objet/P2_redef_sig_diff.deca
class A {
    void m(int x) {}
}
class B extends A {
    void m(float x) {} // Erreur : signature différente (int != float)
}
